--- a/Control Node/Control Node.csproj
+++ b/Control Node/Control Node.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ControlMain.cs" />
+    <Compile Include="ControlParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
