--- a/Control Node/Control Node.csproj
+++ b/Control Node/Control Node.csproj
@@ -46,7 +46,9 @@
     <Compile Include="ControlParser.cs" />
     <Compile Include="NetworkTopology.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RemoteTopology.cs" />
     <Compile Include="RoutingController.cs" />
+    <Compile Include="ShortTopology.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
