agent LRM w routerze
dodałem agenta lrm w routerze, który "odbiera" wiadomość od CC i na jej podstawie wypełnia tablicę komutacji

--- a/Router/Router.csproj
+++ b/Router/Router.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RouterAgentCC.cs" />
+    <Compile Include="RouterAgentLRM.cs" />
     <Compile Include="RouterConfigParser.cs" />
     <Compile Include="RouterReceiver.cs" />
     <Compile Include="RouterMain.cs" />
