--- a/Router/Router.csproj
+++ b/Router/Router.csproj
@@ -51,6 +51,7 @@
     <Compile Include="RouterAgentCC.cs" />
     <Compile Include="RouterAgentLRM.cs" />
     <Compile Include="RouterConfigParser.cs" />
+    <Compile Include="RouterConnectionController.cs" />
     <Compile Include="RouterReceiver.cs" />
     <Compile Include="RouterMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
