--- a/Router/Router.csproj
+++ b/Router/Router.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DTOs">
-      <HintPath>..\DTOs\bin\Debug\DTOs.dll</HintPath>
+      <HintPath>..\DTOs\obj\Debug\DTOs.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
